fix: History list content auto wraps

--- a/src/style/sidebar.less
+++ b/src/style/sidebar.less
@@ -58,6 +58,7 @@
                     flex: 1;
                     color: @gray1;
                     font-size: 10pt;
+                    white-space: nowrap;
                 }
                 .item-output {
                     flex: 1;
